--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "svgr": "svgr  --icon --svg-props fill=currentColor -d components/icons public/images/svgs"
   },
   "dependencies": {
+    "chart.js": "^3.9.1",
     "mongoose": "^6.6.7",
     "next": "12.3.1",
     "react": "18.2.0",
