--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "mongoose": "^6.6.7",
+    "nanoid": "^4.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
