--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "chart.js": "^3.9.1",
+    "lottie-web": "^5.9.6",
     "mongoose": "^6.6.7",
     "nanoid": "^4.0.0",
     "next": "12.3.1",
