--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^6.6.7",
     "nanoid": "^4.0.0",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
