--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "svgr": "svgr  --icon --svg-props fill=currentColor -d components/icons public/images/svgs"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.3",
     "chart.js": "^3.9.1",
     "lottie-web": "^5.9.6",
     "mongoose": "^6.6.7",
@@ -27,10 +30,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "jest": "^29.2.0",
     "jest-environment-jsdom": "^29.2.0",
-    "rimraf": "^3.0.2"
+    "postcss": "^8.4.24",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.3.2"
   }
 }
