--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "chart.js": "^3.9.1",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "hammerjs": "^2.0.8",
     "lottie-web": "^5.9.6",
     "mongoose": "^6.6.7",
     "nanoid": "^4.0.0",
